--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>com.fastcube.project</groupId>
   <artifactId>maven-jenkins</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>bw-ear</packaging>
   <name>maven-jenkins project</name>
   <properties>
